--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>edu.kit.kastel.sdq</groupId>
       <artifactId>artemis4j</artifactId>
-      <version>8.0.0</version>
+      <version>8.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.jcommander</groupId>
