--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
   </dependencies>
   <repositories>
     <repository>
-      <id>maven snapshots</id>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+      <id>central</id>
+      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
     </repository>
   </repositories>
 
