--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,14 @@
   </dependencies>
   <repositories>
     <repository>
-      <id>central</id>
+      <id>central-snapshots</id>
       <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+          <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
