--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>edu.kit.kastel.sdq</groupId>
       <artifactId>artemis4j</artifactId>
-      <version>8.0.0</version>
+      <version>8.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.jcommander</groupId>
@@ -46,8 +46,14 @@
   </dependencies>
   <repositories>
     <repository>
-      <id>maven snapshots</id>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+      <id>central-snapshots</id>
+      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+          <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
